fixed width for song and map on mobile

--- a/src/views/DateDetailView/DateDetailView.module.css
+++ b/src/views/DateDetailView/DateDetailView.module.css
@@ -31,7 +31,7 @@
 
 
 .song{
-    width: 600px; 
+    width: 100%; 
     height: 100%; 
     border: 0;
 }
@@ -107,7 +107,6 @@ iframe {
   flex-direction: column;
 }
 iframe {
-    width:500px;
-   
+    width:100%;
 }
 }
